[package]
name = "kami"
author = "mrfluffy-dev"
license = "GPL-3.0"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
colored = "2.0.0"
isahc = "1.7.2"
base64 = "0.13"
termsize = "0.1.6"
dirs = "4.0"
serde_json = "1.0.83"
tui = "0.18.0"
crossterm = "0.24.0"
unicode-width = "0.1.9"
